<resources>
    <string name="app_name" translatable="false">Formulaire</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="age">Age</string>
    <string name="domComp">Domaine de compétence</string>
    <string name="numTel">Numéro de téléphone</string>
    <string name="submit">Valider</string>
    <string name="continuer">Continuer</string>
    <string name="dismiss">Annuler</string>
    <string name="attention">Attention</string>
    <string name="voulez_vous_continuer">Voulez-vous continuer ?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="Retour">Retour</string>
    <string name="defaultNumber" translatable="false">06 00 00 00 00</string>
    <string name="appeler">Appeler</string>
    <string name="agenda_title">Agenda</string>
    <string name="add_event">Ajouter un événement</string>
    <string name="event_title">Titre</string>
    <string name="event_title_hint">Entrez le titre de l\'événement</string>
    <string name="event_description">Description</string>
    <string name="event_description_hint">Entrez la description de l\'événement</string>
    <string name="event_date">Date</string>
    <string name="event_time">Heure</string>
    <string name="select_date">Choisir</string>
    <string name="select_time">Choisir</string>
    <string name="save_event">Enregistrer</string>
</resources>